# Boarding-Pass-Parser

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GEMINI.md  README.md  app.py  docker-compose.prod.yml  docker-compose.tailscale.yml  docker-compose.yml  main.py  pyproject.toml  utils.py
.claude/: settings.json  settings.local.json
.tailscale/: funnel.json
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_create_user_oauth_tokens.py  0001_initial_schema.py  0002_create_flights.py  0002_create_user_mail_connections.py  0003_create_gmail_sync_jobs.py
api/app/: main.py
api/app/core/: app_factory.py  dependencies.py  middleware.py  redis.py  settings.py
api/app/db/: base.py  session.py  supabase.py
api/app/mail/: base.py  gmail.py  outlook.py  protonmail.py  registry.py
api/app/models/: __init__.py  airline.py  airport.py  flight.py  gmail_sync_job.py  mail_connection.py  user_oauth_token.py
api/app/parsers/: base.py  bcbp_decoder.py  dataclass.py  enum.py  factory.py
api/app/parsers/airlines/: akasa.py  generic.py  indigo.py
api/app/routes/v1/: boarding_pass.py  routes.py
api/app/routes/v1/endpoints/: auth.py  boarding_pass.py  flights.py  gmail.py  mail_connections.py  user.py
api/app/schemas/: flight_schema.py  gmail_schema.py
api/app/services/: auth_service.py  flight_service.py  gmail_service.py  mail_token_service.py  oauth_token_service.py  parser_service.py  storage_service.py
api/app/tasks/: celery_app.py  gmail_sync.py
app/: main.py
app/backend/: .env.example  main.py  pyproject.toml  requirements.new.txt  requirements.old.txt
app/backend/core/: app_factory.py  config.py  dependencies.py  environment.py  exceptions.py  middleware.py  settings.py
app/backend/db/: supabase.py
app/backend/parsers/: base.py
app/backend/routes/v1/: boarding_pass.py  health.py  routes.py
app/backend/routes/v1/endpoints/: auth.py
app/backend/services/: auth_service.py  google_oauth.py  parser_service.py
parsers/: base.py  dataclass.py  enum.py  factory.py  utils.py
src/: main.py
web/: AGENTS.md  CLAUDE.md  next.config.ts  package-lock.json  package.json  proxy.ts
(+67 files in other folders)
