[project]
name = "flighttrackr-api"
version = "0.1.0"
description = "FlightTrackr API — boarding pass parsing and flight tracking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.42.0",
    "python-multipart>=0.0.22",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "alembic>=1.16",
    # Supabase / Auth
    "supabase>=2.28.3",
    "pydantic-settings>=2.13.1",
    # Google / Gmail
    "google-api-python-client>=2.193.0",
    "google-auth>=2.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    # Celery / Redis
    "celery[redis]>=5.5",
    "redis>=5.3",
    # Security
    "cryptography>=44.0",
    # PDF / Barcode parsing
    "pdfplumber>=0.11.9",
    "zxing-cpp>=3.0.0",
    # Utilities
    "numpy>=2.4.3",
    "pytz>=2024.1",
    "dependency-injector>=4.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",       # async test client for FastAPI
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.poetry]
packages = [
    { include = ".", from = "app" },
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
