[project]
name = "boarding-pass-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dependency-injector>=4.49.0",
    "fastapi>=0.135.1",
    "google-api-python-client>=2.193.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "numpy>=2.4.3",
    "pdfplumber>=0.11.9",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "pytz>=2026.1.post1",
    "supabase>=2.28.3",
    "uvicorn>=0.42.0",
    "zxing-cpp>=3.0.0",
]
